--- a/views/FriendList.html
+++ b/views/FriendList.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>CIS557_Project_MainPage</title>   
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
-        <link href="/stylesheets/FriendStyle.css" rel="stylesheet" type="text/css"/>
-        <script src="/javascripts/FriendController.js" type="text/javascript"></script>
+         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-sanitize.js"></script>
+
+        <link href="/stylesheets/FriendStyle.css" rel="stylesheet" type="text/css"/>
+        <script src="/javascripts/FriendController.js" type="text/javascript"></script>
     </head>    
 
     <body>
@@ -32,7 +35,7 @@
                                 </a>
                             </div>
                             
-                            <a class="nav-item nav-link" id="loginpage">
+                            <a class="nav-item nav-link" id="loginpage" href="/Login">
                                 <i class="fas fa-sign-out-alt"></i> Logout
                             </a>
                         </div>
@@ -76,11 +79,11 @@
                 <div class="su-container" ng-repeat="sf in suggest">
                     <img ng-src="{{sf.icon}}">
                     <p id="suggest-username">{{sf.username}}</p>      
-                    <button type="submit" class="search-btn" ng-click="followUser(sf.username)"><p id="followbtn">Follow</p></button>
+                    <button type="submit" class="search-btn" ng-click="followUser({event:$event})">Follow</button>
                 </div>
             </div>
         </div>
-
+        </div>
     </body>
     <script src="/javascripts/StaticPage.js"></script>
 </html>
