--- a/views/GuestProfile.html
+++ b/views/GuestProfile.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>CIS557_Project_MainPage</title>   
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
-        <script src="/javascripts/FriendController.js" type="text/javascript"></script>   
-        <script src="/javascripts/GuestProfileController.js" type="text/javascript"></script>   
+         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-sanitize.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
         <link href="/stylesheets/ProfileStyle.css" rel="stylesheet">
+        <script src="/javascripts/FriendController.js" type="text/javascript"></script>   
+        <script src="/javascripts/GuestProfileController.js" type="text/javascript"></script> 
     </head>
-    <body href="GuestProfile" ng-controller="dynamicController">
+    <body href="GuestProfile">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="grid-nav">
             <span class="navbar-brand center">Watch The Fun</span>
                         
@@ -30,7 +33,7 @@
                             <i class="fas fa-user-circle"></i> My Profile
                         </a>
                     </div>
-                    <a class="nav-item nav-link" id="loginpage">
+                    <a class="nav-item nav-link" id="loginpage" href="/Login">
                         <i class="fas fa-sign-out-alt"></i> Logout
                     </a>
                 </div>
@@ -52,7 +55,6 @@
                 </div> 
             </div>
             <div id="grid-main">
-                <!-- TODO: change this part into ng-repeat -->
                 <div class="element" ng-repeat="x in injectMain">
                     <p style="display: none;">{{x.post_id}}</p>
                     <div class="title">
@@ -67,21 +69,34 @@
                         <p>{{x.text}}</p>
                     </div>
                     <div class="tail">
-                            <div class="like">
-                                <div class="like-btn" ng-click="addLike({event: $event})">
-                                    <a class="far fa-thumbs-up" style="color:red"></a>
-                                    <p class="like-text"> Like!</p>
-                                </div>
-                                <div class="like-info">
-                                    <p class="like-count">0</p>
-                                    <p> people like this post</p>
-                                </div>
+                        <div class="like">
+                            <div class="like-btn" style="background-color:{{x.bkg_color}};">
+                                <a class="{{x.thumb}}" style="color:red;"></a>
+                                <p class="like-text">{{x.liked}}</p>
+                            </div>
+                            <div class="comment-btn">
+                                <a class="far fa-comments" style="color:green"></a>
+                                <p class="comment-text"> Chat !</p>
+                            </div>
+                            <div class="like-info">
+                                <p class="like-count">{{x.like_count}}</p>
+                                <p> people like this post</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="comment_list">
+                        <div class="comment-element" ng-repeat="y in x.commentList">
+                            <div class="cmt-title">
+                                <div class="cmt-person">{{y.username}}</div>
+                                <div class="cmt-time">{{y.time}}</div>
+                            </div>
+                            <div class="cmt-body">{{y.cmt_content}}</div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </body>
     <script src="/javascripts/StaticPage.js"></script>
-    <script src="/javascripts/DynamicController.js" type="text/javascript"></script>
 </html>
