--- a/views/FriendList.html
+++ b/views/FriendList.html
@@ -16,7 +16,7 @@
         <script src="/javascripts/FriendController.js" type="text/javascript"></script>
     </head>    
 
-    <body>
+    <body ng-controller="dynamicController">
         <div id="grid-container">
             <!-- Navigation bar at the top of the screen -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light" id="grid-nav">
@@ -35,7 +35,7 @@
                                 </a>
                             </div>
                             
-                            <a class="nav-item nav-link" id="loginpage" href="/Login">
+                            <a class="nav-item nav-link" id="loginpage" ng-click="logout()">
                                 <i class="fas fa-sign-out-alt"></i> Logout
                             </a>
                         </div>
@@ -86,4 +86,5 @@
         </div>
     </body>
     <script src="/javascripts/StaticPage.js"></script>
+    <script src="/javascripts/DynamicController.js" type="text/javascript"></script>
 </html>
