--- a/views/GuestProfile.html
+++ b/views/GuestProfile.html
@@ -16,7 +16,7 @@
         <script src="/javascripts/FriendController.js" type="text/javascript"></script>   
         <script src="/javascripts/GuestProfileController.js" type="text/javascript"></script> 
     </head>
-    <body href="GuestProfile">
+    <body ng-controller="dynamicController" href="GuestProfile">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="grid-nav">
             <span class="navbar-brand center">Watch The Fun</span>
                         
@@ -33,7 +33,7 @@
                             <i class="fas fa-user-circle"></i> My Profile
                         </a>
                     </div>
-                    <a class="nav-item nav-link" id="loginpage" href="/Login">
+                    <a class="nav-item nav-link" id="loginpage" ng-click="logout()">
                         <i class="fas fa-sign-out-alt"></i> Logout
                     </a>
                 </div>
@@ -99,4 +99,5 @@
         </div>
     </body>
     <script src="/javascripts/StaticPage.js"></script>
+    <script src="/javascripts/DynamicController.js" type="text/javascript"></script>
 </html>
