--- a/views/MainPage.html
+++ b/views/MainPage.html
@@ -36,7 +36,7 @@
                             <i class="fas fa-user-circle"></i> My Profile
                         </a>
                     </div>
-                    <a class="nav-item nav-link" id="loginpage" href="/Login">
+                    <a class="nav-item nav-link" id="loginpage" ng-click="logout()">
                         <i class="fas fa-sign-out-alt"></i> Logout
                     </a>
                 </div>
