--- a/views/GuestProfile.html
+++ b/views/GuestProfile.html
@@ -45,7 +45,7 @@
                 <div id="user-info">
                     <img id="grid-user-photo"/> 
                     <div id="grid-username" ng-init="addIcon()"></div> 
-                    <button type="submit" id="search-btn" ng-click="followUser()"><p id="followbtn"></p></button>
+                    <button type="submit" id="search-btn" ng-click="followUser()"><p id="followbtn">Follow</p></button>
                 </div>
                     
                 <div class="user-record">
