--- a/views/MainPage.html
+++ b/views/MainPage.html
@@ -50,7 +50,7 @@
                     <p class="inline_id" style="display: none;">{{x.post_id}}</p>
                     <div class="title">
                         <div class="person">
-                            <img class="person-icon" ng-src="{{x.icon}}"/>
+                            <img class="person-icon" ng-src="{{x.icon1}}"/>
                             <p class="person-name">{{x.username}}</p>
                         </div>
                         <div class="post-time">{{x.time}}</div>
