--- a/public/stylesheets/MainStyle.css
+++ b/public/stylesheets/MainStyle.css
@@ -1,3 +1,10 @@
+body{
+    background-color: #d8bd8b;
+    padding-left: 50px;
+    padding-right: 50px;
+    /* display: flex;
+    justify-content: space-between; */
+}
 /* Custom scroll bar of main page */
 ::-webkit-scrollbar {
     width: 0.5vw;
@@ -23,6 +30,7 @@
 /* Major components */
 #grid-container{
     display: flex;
+    background-color: ivory;
     min-width: 1200px;
     max-width: 100vw;
     min-height: 1000px;
@@ -62,27 +70,29 @@
 }
 
 #grid-main{
+    border: 5px solid black;
     display: flex;
     width: 800px;
     flex-flow: column;
     overflow-y: scroll;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     min-height: 1000px;
-    margin: 20px;
+    /* margin: 20px; */
     justify-content: flex-start;
     align-items: flex-start;
 }
 
 #grid-sidebar{
+    border: 5px solid black;
     display: flex;
     flex-flow: column;
     overflow-y: scroll;
     overflow-x: hidden;
     min-width: 400px;
     min-height: 1000px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin: 20px;
+    justify-content: center;
+    /* align-items: center; */
+    /* margin: 20px; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
