--- a/public/stylesheets/FriendStyle.css
+++ b/public/stylesheets/FriendStyle.css
@@ -1,11 +1,11 @@
-  
 body{
-    background-color:#81bed1;
+    background-color:#d8bd8b;
 }
 #grid-nav{
     display: flex;
     flex-flow: row;
     min-width: 1200px;
+    min-width:100vw;
     height: 50px;
 }
 #grid-nav>span{
@@ -35,7 +35,7 @@ body{
 }
 
 #grid-container{
-    background-color:#81bed1;
+    background-color:#d8bd8b;
     display: flex;
     grid-auto-flow: column;
     flex-direction: column;
@@ -51,29 +51,29 @@ body{
     font-size:20px;
     height:95px;
     width:300px;
+    font-family: Poppins-Regular;
+    letter-spacing: 1px;
 }
 #search-container{
     margin-top:2%;
     height:100px;
-    width:1200px;
-    border-radius:10px;
-    border:2px solid #046953;
+    width:1100px;
+    border-bottom:3px solid black;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
     align-items: center;
-    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20190223/ourmid/pngtree-pure-color-watercolor-graffiti-gradient-background-board-design-board-design-image_66713.jpg);
 }
 .search-btn{
-    width: 150px;
-    height: 36px;
+    width: 80px;
+    height: 30px;
     border: none;
+    font-size: 15px;
     padding: 2px 16px;
     box-sizing: border-box;
-    border-radius: 20px;
     outline: none;
-    background: #3c998d;
+    background: #0d8a37;
     color: #fff;
     cursor: pointer;
 }
@@ -83,47 +83,43 @@ body{
 #search-input{
     width:600px;
 }
+
 #friendlist{
-    margin-top:2%;
+    padding:10px;
+    margin-top:20px;
     height:500px;
-    width:1200px;
-    border-radius:10px;
-    border:2px solid #046953;
+    width:1100px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
     align-items: center;
-    background-color:white;
+    background-color:ivory;
 }
-#suggests{
-    margin-top:2%;
-    height:300px;
-    width:1200px;
-    border-radius:10px;
-    border:2px solid #046953;
-    display: flex;
-    flex-direction: column;
-    background-color:white;
-    overflow-x: scroll;
-}
-#suggests-label{
-    text-align: center;
-    margin:0.5% 0.5%;
-    height:25px;
-    width:200px;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaIOiqcCc6b_q1Q-mUZh40ZdLGPUFDupZvTnFpMjwoA225R4wo&s);
-}
+
+
 #suggest-users{
     margin-top:20px;
     height:270px;
-    width:1200px; 
+    width:1100px; 
     display: flex;
     justify-content: space-evenly;
 }
+#suggests{
+    padding:10px;
+    margin-top:20px;
+    height:500px;
+    width:350px;
+    display: flex;
+    flex-direction: row;
+    background-color:white;
+    overflow-x: scroll;
+    justify-content: space-evenly;
+    background-color:transparent; 
+}
 #following-box{
     height:500px;
-    width:600px;
+    width:350px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -131,17 +127,27 @@ body{
 }
 #follower-box{
     height:500px;
-    width:600px;
+    width:350px;
     display: flex;
     flex-direction:row;
     justify-content: space-evenly;
     background-color:transparent;
 }
-#following-label{
-    margin-left:5%;
-    margin-top:5%;
+
+#suggests-label{
     height:450px;
-    width:100px;
+    width:50px;
+    display: flex;
+    flex-direction: column;
+    font-size: 30px; 
+    justify-content: space-evenly;
+    text-align: center;
+    background-image: url(https://previews.123rf.com/images/rusrf/rusrf1703/rusrf170300799/73647549-abstract-yellow-background-texture.jpg);
+}
+#following-label{
+    margin-top:20px;
+    height:450px;
+    width:50px;
     display: flex;
     flex-direction: column;
     font-size: 30px; 
@@ -150,10 +156,9 @@ body{
     background-image:url(http://eskipaper.com/images/background-3.jpg);
 }
 #follower-label{
-    margin-left:5%;
-    margin-top:5%;
+    margin-top:20px;
     height:450px;
-    width:100px;
+    width:50px;
     display: flex;
     flex-direction: column;
     font-size: 30px; 
@@ -162,24 +167,22 @@ body{
     background-image:url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-05.jpg);
 }
 #following-container{
-    margin-top:5%;
-    margin-right: 3%;
+    margin-top:20px;
+    margin-right: 5px;
     height:450px;
-    width: 450px;
+    width: 300px;
     display: flex;
     flex-direction: column;
-    background-color: #dde2e1;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 #follower-container{
-    margin-top:5%;
-    margin-right: 5%;
+    margin-top:20px;
+    margin-right: 5px;
     height:450px;
-    width: 450px;
+    width: 300px;
     display: flex;
     flex-direction: column;
-    background-color: #dde2e1;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -209,16 +212,26 @@ body{
 /* Major components */
 #grid-container{
     display: flex;
-    min-width: 1200px;
+    min-width: 1100px;
     max-width: 100vw;
     min-height: 1000px;
     max-height: 1500px;
 }
 .friendlist-table{
+    display: flex;
+    justify-content: center;
     text-align: right;
 }
+.suggest-table{
+    display: flex;
+    justify-content: center;
+    text-align: right;
+    width:330px;
+}
 .friendbtn{
-    width:450px;
+    border:0px;
+    background-color:transparent;
+    width:150px;
 }
 .su-container{
     height:200px;
@@ -228,4 +241,30 @@ body{
     align-content: center;
     align-items: center;
 }
-
+#main-container{
+    margin-left:50px;
+    margin-right:50px;
+    padding-left:20px;
+    padding-right:20px;
+    background-color: ivory;
+    min-width: 1100px;
+    max-width: 100vw;
+    min-height: 1000px;
+    max-height: 1500px;
+}
+.smicon{
+    display: flex;
+    justify-content: space-between;
+    font-family: Poppins-Regular;
+    font-size: 17px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+}
+#users-container{
+    display: flex;
+    justify-content: space-between;
+    font-family: Poppins-Regular;
+    font-size: 17px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+}
