--- a/views/Login.html
+++ b/views/Login.html
@@ -11,7 +11,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-sanitize.js"></script>
-
         <link href="/stylesheets/LoginStyle.css" rel="stylesheet">
         <script src="/javascripts/LoginController.js" type="text/javascript"></script>
     </head>
@@ -27,7 +26,8 @@
                     Account Login
                 </span>
                 <center>
-                    <input type="text" class="input username" placeholder="Username" ng-model="username" ng-init="username =''" id="name"/><input type="password" class="input password" placeholder="Password" ng-model="password" ng-init="password =''" id="pwd"/>
+                    <input type="text" class="input username" placeholder="Username" ng-model="username" ng-init="username =''" id="name"/><input
+                     type="password" class="input password" placeholder="Password" ng-model="password" ng-init="password =''" id="pwd"/>
                 </center>
                 <center>
                     <button type="button" class="login-button" id="login" name="Login" ng-click="verifyLogin()"><span class="login100-form-title">Login</span></button><button type="button" class="login-button" id="signup" name="SignUp" ng-click="newUser()"><span class="login100-form-title">Sign Up</span></button>
