--- a/stylesheets/LoginStyle.css
+++ b/stylesheets/LoginStyle.css
@@ -101,7 +101,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-background-image: url(https://images.unsplash.com/photo-1529736576495-1ed4a29ca7e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+background-image: url(https://media.worldnomads.com/learnimages/2019/newimages/Annapurnamellor.jpg);
 background-repeat:no-repeat;
 /* animation: 10s rainbow infinite linear; */
 }
