--- a/public/stylesheets/MainStyle.css
+++ b/public/stylesheets/MainStyle.css
@@ -494,5 +494,9 @@ div.dropdown-row>a.dropdown-item{
     flex-direction: row;
     justify-content: space-evenly;
     border:5px solid grey;
-
+}
+.ng-binding{
+    display:flex;
+    flex-wrap:row;
+    width:200px;
 }
