--- a/views/MainPage.html
+++ b/views/MainPage.html
@@ -120,7 +120,7 @@
                         <span style="font-family: Poppins-Regular;">Followers</span>
                     <table class="friendlist-table">
                             <tr ng-repeat="f2 in follower">
-                                <td><button type="button" class="friendbtn" ng-click="goProfile(f2.follow_host)">{{f2.follow_host}}</button></td>
+                                <td><button type="button" class="friendbtn" ng-click="goProfile(f2.follow_guest)">{{f2.follow_guest}}</button></td>
                             </tr>
                           </table>
                     </div>
